# fast-matching-engine

./: README.md
backend/: main.py
backend/Cpp_files/bindings/: CMakeLists.txt  bindings.cpp  myengine.cp310-win_amd64.pyd  test.py
backend/Cpp_files/core/: MatchingEngine.cpp  MatchingEngine.h  Order.cpp  Order.h  OrderBook.cpp  OrderBook.h  Trade.h
backend/app/: main.py
backend/app/engine/: engine_instance.py
backend/app/models/: book_model.py  cancel_model.py  engine_model.py  order.py  order_model.py  trade_model.py
backend/app/routes/: order_routes.py  orderbook_routes.py
backend/app/services/: order_service.py  orderbook_services.py
backend/app/utils/: order_validate.py  snowflake_order_id_generator.py
backend/app/validators/: order_validate.py
backend/models/: order.py  trade.py
